--- a/index.html
+++ b/index.html
@@ -345,8 +345,7 @@
                         <!-- Thumbnail list-->
                         <div class="portfolio-grid row" style="position: relative; height: 821.094px;">
                           <!-- Single item-->
-                          <div class="single-item col-6 col-lg-4 photos"
-                            style="position: absolute; left: 399.984px; top: 0px;"><a class="portfolio-item"
+                          <div class="single-item col-6 col-lg-4 photos"><a class="portfolio-item"
                               href="https://pay.hotmart.com/N85305262F?sck=HOTMART_PRODUCT_PAGE&off=hsealt6t&hotfeature=32&bid=1709085038091" data-lightbox="">
                               <div class="portfolio-wrapper"><img class="img-fluid" alt="Item" src="img/item-1a.jpeg">
                                 <div class="item-content">
@@ -356,8 +355,7 @@
                               </div>
                             </a></div>
                           <!-- Single item-->
-                          <div class="single-item col-6 col-lg-4 brand"
-                            style="position: absolute; left: 399.984px; top: 425.547px;"><a class="portfolio-item"
+                          <div class="single-item col-6 col-lg-4 brand" ><a class="portfolio-item"
                               href="img/Em-Breve.jpeg" data-lightbox="">
                               <div class="portfolio-wrapper rc-mb-0"><img class="img-fluid" alt="Item" src="img/item-2b.jpeg">
                                 <div class="item-content">
