atualizando os produtos

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                           <div class="single-item col-6 col-lg-4 brand"><a class="portfolio-item" href="https://go.hotmart.com/S91887173K" data-lightbox="">
                               <div class="portfolio-wrapper rc-mb-0"><img class="img-fluid" alt="Item" src="img/item-2b.jpeg">
                                 <div class="item-content">
-                                  <h6 class="content-title">Monte sua dieta</h6><span class="content-more">
+                                  <h6 class="content-title">Monte sua Dieta</h6><span class="content-more">
                                   </span>
                                 </div>
                               </div>
